build: Switch to JDK 19 with preview features